# komodo

./: .gitignore  Cargo.toml  komodo.code-workspace  readme.md  roadmap.md  runfile.toml
.devcontainer/: dev.compose.yaml  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
action/: build.ts  deno.json  deploy-fe.ts  deploy.ts  run.ts
client/core/rs/: Cargo.toml
client/core/rs/src/: busy.rs  lib.rs  openapi.rs  request.rs  terminal.rs
client/core/rs/src/api/: mod.rs  terminal.rs
client/core/rs/src/api/execute/: action.rs  alerter.rs  build.rs  deployment.rs  maintenance.rs  mod.rs  openapi.rs  procedure.rs  repo.rs  server.rs  stack.rs  swarm.rs  sync.rs
client/core/rs/src/api/read/: action.rs  alert.rs  alerter.rs  build.rs  builder.rs  deployment.rs  docker.rs  mod.rs  onboarding_key.rs  openapi.rs  permission.rs  procedure.rs  provider.rs  repo.rs  schedule.rs  server.rs  stack.rs  swarm.rs  sync.rs  tag.rs  terminal.rs  toml.rs  update.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/api/write/: action.rs  alert.rs  alerter.rs  api_key.rs  build.rs  builder.rs  deployment.rs  mod.rs  onboarding_key.rs  openapi.rs  permissions.rs  procedure.rs  provider.rs  repo.rs  resource.rs  server.rs  stack.rs  swarm.rs  sync.rs  tags.rs  terminal.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/deserializers/: forgiving_vec.rs
client/core/rs/src/entities/: action.rs  alert.rs  alerter.rs  api_key.rs  build.rs  builder.rs  deployment.rs  logger.rs  mod.rs  onboarding_key.rs  permission.rs  procedure.rs  provider.rs  repo.rs  resource.rs  schedule.rs  server.rs  stack.rs  stats.rs  swarm.rs  sync.rs  tag.rs  terminal.rs  toml.rs  update.rs  user.rs  user_group.rs  variable.rs
client/core/rs/src/entities/config/: core.rs  mod.rs  periphery.rs
client/core/rs/src/entities/config/cli/: mod.rs
client/core/rs/src/entities/config/cli/args/: container.rs  create.rs  database.rs  list.rs  mod.rs  terminal.rs  update.rs
client/core/rs/src/entities/docker/: config.rs  container.rs  image.rs  mod.rs  network.rs  node.rs  secret.rs  service.rs  stack.rs  stats.rs  swarm.rs  task.rs  volume.rs
client/core/rs/src/ws/: mod.rs  terminal.rs  update.rs
client/core/ts/: generate_types.mjs  package.json  tsconfig.json
client/periphery/rs/: Cargo.toml
client/periphery/rs/src/: lib.rs
client/periphery/rs/src/api/: build.rs  compose.rs  container.rs  docker.rs  git.rs  keys.rs  mod.rs  poll.rs  stats.rs  swarm.rs  terminal.rs
client/periphery/rs/src/transport/: login.rs  mod.rs
compose/: ferretdb.compose.yaml
config/: core.config.toml  komodo.cli.toml  periphery.config.toml
docsite/: Dockerfile  docusaurus.config.ts  package.json  runfile.toml  sidebars.ts
docsite/docs/: build.md  intro.md  resources.md  swarm.md  terminals.md
docsite/docs/automate/: procedures.md  schedules.md  sync-resources.md  webhooks.md
docsite/docs/configuration/: permissioning.md  providers.md  variables.md
docsite/docs/deploy/: auto-update.md  compose.md  containers.md
docsite/docs/ecosystem/: cli.mdx  community.md  development.md  index.mdx
docsite/docs/releases/: v2.0.0.md
docsite/docs/setup/: advanced.mdx  backup.md  connect-servers.mdx  index.mdx  mongo.mdx
docsite/src/components/: KomodoLogo.tsx
docsite/src/css/: custom.css
docsite/src/pages/: index.module.css  index.tsx
docsite/static/: CNAME
example/alerter/: Cargo.toml  Dockerfile
example/alerter/src/: main.rs
example/update_logger/: Cargo.toml  Dockerfile
example/update_logger/src/: main.rs
lib/command/: Cargo.toml
lib/command/src/: lib.rs  output.rs
lib/database/src/: lib.rs
lib/encoding/: Cargo.toml
lib/encoding/src/: channel.rs  json.rs  lib.rs  macros.rs  response.rs
lib/environment/: Cargo.toml
lib/environment/src/: lib.rs
lib/formatting/: Cargo.toml
lib/formatting/src/: lib.rs
lib/git/: Cargo.toml
lib/git/src/: clone.rs  commit.rs  init.rs  lib.rs  pull.rs  pull_or_clone.rs
lib/interpolate/src/: lib.rs
lib/transport/: Cargo.toml
lib/transport/src/: auth.rs  channel.rs  lib.rs  timeout.rs
lib/transport/src/websocket/: axum.rs  login.rs  mod.rs  tungstenite.rs
scripts/: install-cli.py  readme.md  setup-periphery.py
ui/: Dockerfile  README.md  fix_public_client.mjs  package.json  postcss.config.cjs  runfile.toml  tsconfig.json  vite.config.ts
ui/public/: manifest.json
ui/public/client/: lib.d.ts  lib.js  responses.d.ts  terminal.d.ts  terminal.js  types.d.ts  types.js
ui/src/: index.scss  main.tsx  router.tsx
ui/src/app/: index.tsx  sidebar.tsx
ui/src/components/: batch-executions.tsx  confirm-modal-with-disable.tsx  export-toml.tsx  file-source.tsx  hash-compare.tsx  inspect-section.tsx  log-section.tsx  maintenance-windows.tsx  monaco.tsx  repo-link.tsx  resource-type-selector.tsx  stack-service-link.tsx  stack-service-selector.tsx  template-marker.tsx  template-query-selector.tsx  template-switch.tsx  timezone-selector.tsx  user-avatar.tsx
ui/src/lib/: color.ts  formatting.ts  hooks.ts  socket.tsx  utils.ts
ui/src/monaco/: init.ts  theme.ts
ui/src/pages/: alert.tsx  alerts.tsx  containers.tsx  resource.tsx  resources.tsx  schedules.tsx  terminal.tsx  update.tsx  updates.tsx  user-disabled.tsx
ui/src/resources/: delete.tsx  description.tsx  header-action.tsx  header.tsx  index.ts  link.tsx  name.tsx  new-with-deploy-target.tsx  new.tsx  not-found.tsx  selector.tsx  sub-page.tsx  tags.tsx
ui/src/theme/: icons.ts  index.scss  index.tsx
ui/src/ui/: back-button.tsx  confirm-button.tsx  confirm-icon.tsx  confirm-modal.tsx  copy-button.tsx  copy-text.tsx  create-modal.tsx  data-table.tsx  enable-switch.tsx  entity-header.tsx  entity-page.tsx  hover-error.tsx  info-card.tsx  input-list.tsx  labelled-switch.tsx  labels-group.tsx  loading-screen.tsx  log-viewer.tsx  mobile-friendly-tabs.tsx  page-guard.tsx  page.tsx  search-input.tsx  section.tsx  shared-text-update.tsx  show-hide-button.tsx  stat-bar.tsx  stat-cell.tsx  status-badge.tsx  tabbed-page.tsx  table-skeleton.tsx  text-update-modal.tsx  theme-toggle.tsx
(+261 files in other folders)
