[package]
name = "encoding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes.workspace = true
#
mogh_error.workspace = true
#
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
uuid.workspace = true