[package]
name = "environment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mogh_secret_file = { workspace = true, features = ["write", "tokio"] }
komodo_client.workspace = true
formatting.workspace = true
#
anyhow.workspace = true