[package]
name = "periphery_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
komodo_client.workspace = true
encoding.workspace = true
mogh_pki.workspace = true
# mogh
mogh_resolver.workspace = true
# external
anyhow.workspace = true
serde.workspace = true
strum.workspace = true
uuid.workspace = true
